# OCP-OSF-Tektagon_Community_Edition

./: LICENSE  README.md  Trademark.md  build.cmd  build.sh  governance.md  maintainers.md
cerberus_patches/: CMakeLists.txt  Kconfig  i2c_slave_common.h  rsah.patch
cerberus_patches/zephyr/: platform.h  platform_config.h  platform_io.h
oe-src/Wrapper/Tektagon-OE/: CMakeLists.txt  Kconfig
oe-src/Wrapper/Tektagon-OE/Crypto/: HashWrapper.h  RsaWrapper.h  SignatureVerificationRsaWrapper.c  SignatureVerificationRsaWrapper.h
oe-src/Wrapper/Tektagon-OE/I2c/: I2cWrapper.c
oe-src/Wrapper/Tektagon-OE/I2cFilter/: I2cFilterWrapper.h
oe-src/Wrapper/Tektagon-OE/ManifestProcess/: ManifestWrapper.h
oe-src/Wrapper/Tektagon-OE/ManifestProcess/PfmFlashWrapper/: PfmFlashWrapper.c
oe-src/Wrapper/Tektagon-OE/SpiFilter/: SpiFilterWrapper.h
oe-src/Wrapper/Tektagon-OE/WatchDog/: WatchDog.c
zephyr/ApplicationLayer/tektagon/: CMakeLists.txt  VERSION  prj.conf  zephyr_feature.yaml
zephyr/ApplicationLayer/tektagon/src/: main.c
zephyr/ApplicationLayer/tektagon/src/I2c_Handler/: BmcI2C_handler.h
zephyr/ApplicationLayer/tektagon/src/Smbus_mailbox/: Smbus_mailbox.c  Smbus_mailbox.h
zephyr/ApplicationLayer/tektagon/src/StateMachineAction/: StateMachineActions.c  StateMachineActions.h
zephyr/ApplicationLayer/tektagon/src/common/: pfm_headers.h
zephyr/ApplicationLayer/tektagon/src/context_manager/: context_manager.c
zephyr/ApplicationLayer/tektagon/src/include/: SmbusMailBoxCom.h
zephyr/ApplicationLayer/tektagon/src/keystore/: KeystoreManager.c  KeystoreManager.h
zephyr/ApplicationLayer/tektagon/src/manifestProcessor/: manifestProcessor.c
zephyr/ApplicationLayer/tektagon/src/pfr/: pfr_common.c  pfr_common.h  pfr_recovery.h  pfr_ufm.h  pfr_update.c  pfr_update.h  pfr_util.c  pfr_verification.c
zephyr/ApplicationLayer/tektagon/src/state_machine/: common_smc.h  state_machine.c  state_machine.h
zephyr/FunctionalBlocks/: CMakeLists.txt  Kconfig
zephyr/FunctionalBlocks/AmiSmbusInterface/: AmiSmbusInterfaceSrcLib.c  AmiSmbusInterfaceSrcLib.h  CMakeLists.txt
zephyr/FunctionalBlocks/Cerberus/: .gitignore
zephyr/FunctionalBlocks/Cerberus/core/flash/: flash_util.h  spi_flash.h
zephyr/FunctionalBlocks/Cerberus/core/i2c/: i2c_filter.h
zephyr/FunctionalBlocks/Cerberus/core/logging/: debug_log.h  logging_flash.c  logging_flash.h
zephyr/FunctionalBlocks/Cerberus/core/riot/reference/: RiotAes128.c  RiotBase64.c  RiotCrypt.c  RiotDerEnc.c  RiotEcc.c  RiotHmac.c  RiotKdf.c  RiotSha1.c  RiotSha256.c  RiotX509Bldr.c
zephyr/FunctionalBlocks/Cerberus/core/riot/reference/include/: RiotBase64.h  RiotCrypt.h  RiotDerEnc.h  RiotEcc.h  RiotSha1.h  RiotSha256.h  RiotTarget.h  RiotX509Bldr.h
zephyr/FunctionalBlocks/Cerberus/core/status/: module_id.h
zephyr/FunctionalBlocks/Cerberus/core/testing/: debug_log_testing.h
zephyr/FunctionalBlocks/Cerberus/projects/freertos/: config_cmd_task.h  manifest_cmd_handler.h  recovery_image_cmd_handler.h  system_observer_stack_usage.c  system_observer_stack_usage.h
zephyr/FunctionalBlocks/Cerberus/projects/zephyr/: platform.c  platform.h  platform_compiler.c  platform_compiler.h
zephyr/FunctionalBlocks/Common/: CMakeLists.txt
zephyr/FunctionalBlocks/ManifestProcess/: CMakeLists.txt  ManifestProcess.c
zephyr/FunctionalBlocks/Pfr/cerberus/: cerberus_pfr_authentication.c  cerberus_pfr_authentication.h  cerberus_pfr_common.c  cerberus_pfr_definitions.h  cerberus_pfr_key_cancellation.c  cerberus_pfr_pbc.c  cerberus_pfr_pfm_manifest.c  cerberus_pfr_pfm_manifest.h  cerberus_pfr_provision.c  cerberus_pfr_recovery.h  cerberus_pfr_spi_filtering.h  cerberus_pfr_verification.c
zephyr/FunctionalBlocks/Pfr/intel_2.0/: intel_pfr_authentication.h  intel_pfr_pbc.c  intel_pfr_pfm_manifest.c  intel_pfr_pfm_manifest.h  intel_pfr_provision.h  intel_pfr_recovery.c  intel_pfr_spi_filtering.c  intel_pfr_spi_filtering.h  intel_pfr_update.c  intel_pfr_update.h
zephyr/HardwareAbstraction/: CMakeLists.txt  HardwareAbstraction.cmake  Kconfig
zephyr/HardwareAbstraction/Hal/: CMakeLists.txt  Hal.yaml
zephyr/HardwareAbstraction/Hal/CommonCrypto/: CommonHash.c
zephyr/HardwareAbstraction/Hal/CommonFlash/: FlashMaster.c
zephyr/HardwareAbstraction/Hal/CommonLogging/: CommonLogging.h
zephyr/HardwareAbstraction/Hal/Dice/: Dice.h
zephyr/HardwareAbstraction/Hal/Gpio/: Gpio.c  Gpio.h
zephyr/HardwareAbstraction/Hal/SmbusFilter/: SmbusFilter.c
zephyr/HardwareAbstraction/Hal/Spi/: Spi.c
zephyr/HardwareAbstraction/Hal/SpiFilter/: SpiFilter.h
zephyr/HardwareAbstraction/Hal/Watchdog/: Watchdog.h
zephyr/HardwareAbstraction/smf/: CMakeLists.txt
zephyr/Wrapper/: CMakeLists.txt  Kconfig  Wrapper.cmake  Wrapper.yaml
zephyr/Wrapper/Tektagon-OE/: Definition.h
zephyr/Wrapper/Tektagon-OE/Crypto/: HashWrapper.c  RsaWrapper.c
zephyr/Wrapper/Tektagon-OE/Flash/: FlashMasterWrapper.c  FlashWrapper.c  FlashWrapper.h
zephyr/Wrapper/Tektagon-OE/I2c/: I2cWrapper.h
zephyr/Wrapper/Tektagon-OE/I2cFilter/: I2cFilterWrapper.c
zephyr/Wrapper/Tektagon-OE/Logging/: LoggingWrapper.c  LoggingWrapper.h
zephyr/Wrapper/Tektagon-OE/ManifestProcess/: ManifestWrapper.c
zephyr/Wrapper/Tektagon-OE/ManifestProcess/PfmFlashWrapper/: PfmFlashWrapper.h
zephyr/Wrapper/Tektagon-OE/SpiFilter/: SpiFilterWrapper.c
zephyr/Wrapper/Tektagon-OE/WatchDog/: WatchDog.h
zephyr/samples/cpld/vme/: CMakeLists.txt  Kconfig  overlay-fixed-vme.conf  prj.conf  sample.yaml
zephyr/samples/cpld/vme/boards/: ast1030_evb.conf  ast1030_evb.overlay
zephyr/samples/cpld/vme/src/: hardware.c  ivm_core.c  main.c  mxo2_stand.vme  vmopcode.h
zephyr/samples/cpld/vme/src/file/: vme1.c  vme2.c  vme3.c  vme4.c  vme5.c  vme6.c  vme7.c  vme8.c  vme_file.h
zephyr/samples/drivers/i3c/: CMakeLists.txt  Kconfig  README.rst  loopback.overlay  overlay-imx3102.conf  overlay-imx3112.conf  overlay-loopback.conf  prj.conf  sample.yaml
zephyr/samples/drivers/i3c/boards/: ast1030_evb.overlay  ast2600_evb.conf  ast2600_evb.overlay
zephyr/samples/drivers/i3c/src/: i3c-imx3102.c  i3c-imx3112.c  i3c-spd5118.c  main.c
(+632 files in other folders)
